corrected alignment. final commit

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,7 @@ section {
 }
 
 .about-section-content-big {
-    width: 100%;
+    width: 98%;
     border: 1px solid darkred;
     border-radius: 8px;
     height: 450px;
